--- a/game/index.html
+++ b/game/index.html
@@ -24,16 +24,16 @@ const memoryGame = {
     tilesChecked : [], //zaznaczone klocki
     moveCount : 0, //liczba ruchów
     tilesImg : [ //grafiki dla klocków
-        './assets/img/cards/title_1.png',
-        './assets/img/cards/title_2.png',
-        './assets/img/cards/title_3.png',
-        './assets/img/cards/title_4.png',
-        './assets/img/cards/title_5.png',
-        './assets/img/cards/title_6.png',
-        './assets/img/cards/title_7.png',
-        './assets/img/cards/title_8.png',
-        './assets/img/cards/title_9.png',
-        './assets/img/cards/title_10.png'
+        '{{site.baseurl}}/assets/img/cards/title_1.png',
+        '{{site.baseurl}}/assets/img/cards/title_2.png',
+        '{{site.baseurl}}/assets/img/cards/title_3.png',
+        '{{site.baseurl}}/assets/img/cards/title_4.png',
+        '{{site.baseurl}}/assets/img/cards/title_5.png',
+        '{{site.baseurl}}/assets/img/cards/title_6.png',
+        '{{site.baseurl}}/assets/img/cards/title_7.png',
+        '{{site.baseurl}}/assets/img/cards/title_8.png',
+        '{{site.baseurl}}/assets/img/cards/title_9.png',
+        '{{site.baseurl}}/assets/img/cards/title_10.png'
     ],
     canGet : true, //czy można klikać na kafelki
     tilePairs : 0, //liczba dopasowanych kafelkow
